# ReportsService

./: .dockerignore  .pylintrc  Makefile  README.md  gunicorn.config.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: cicd.yml
migrations/versions/: 20210711192555_add_reports_table.py  20211016151616_add_report_rows_table.py  20211104172003_add_promocodes_table.py
reports_service/: auth.py  log.py  payment.py  pricing.py  queue.py  response.py  services.py  settings.py  storage.py
reports_service/api/: app.py  auth.py  config.py  events.py  exception_handlers.py  exceptions.py  middlewares.py  responses.py
reports_service/api/endpoints/: __init__.py  health.py  parsed.py  payment.py  report.py
reports_service/db/: models.py  service.py
reports_service/models/: payment.py  report.py  user.py
tests/: conftest.py  helpers.py  test_pricing.py  utils.py
tests/api/endpoints/: test_parsed.py  test_payment.py  test_report.py
