[tool.poetry]
name = "reports_service"
version = "0.0.1"
description = ""
authors = ["Emiliy Feldman <feldlime@yandex.ru>"]
maintainers = ["Emiliy Feldman <feldlime@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "reports_service" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
sqlalchemy = "^1.4.17"
psycopg2-binary = "^2.8.6"
pydantic = "^1.8.2"
orjson = "^3.5.3"
alembic = "^1.6.5"
gunicorn = "^20.1.0"
aiohttp = "^3.7.4"
uvloop = "^0.15.2"
uvicorn = "^0.14.0"
asyncpg = "^0.23.0"
python-multipart = "^0.0.5"
aioboto3 = "^9.2.0"
aiobotocore = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "2.25.1"
coverage = "^5.5"
mypy = "^0.812"
isort = "^5.8.0"
bandit = "^1.7.0"
flake8 = "^3.9.2"
pylint = "^2.8.3"
Werkzeug = "^2.0.1"
pytest-httpserver = "^1.0.0"
pytest-asyncio = "^0.15.1"
boto3 = "^1.17"
botocore = "^1.20.0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
